--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+pytest-cov = "^4.0.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
