Fix poetry configuration

--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -21,7 +21,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install poetry
-          poetry config settings.virtualenvs.create false
+          poetry config virtualenvs.create false
           poetry install --only dev --no-cache --no-interaction
       - name: Lint with flake8
         run: |
